# ziron

./: .gitignore  Cargo.toml  LICENSE.md  QUICKSTART.md  QUICKSTART_SHELL.md  README.md  setup.sh
.cursor/commands/: push-to-github.md
.github/workflows/: coverage.yml
docs/: BUILTIN_COMMANDS.md  COMPLETION_SYSTEM.md  FUNCTIONS.md  INSTRUCTION.md  MIGRATION_GUIDE.md  PARSING_SYNTAX.md  SHELL_USAGE.md  THEME_ACTIVATION.md  THEMING.md  USAGE.md  WHAT_IS_ZIRON.md  v0.2.0.md  v0.2.0_IMPLEMENTATION_PLAN.md  v0.2.0_REMAINING.md  v0.3.0.md  v0.4.0.md  v1.0.0.md
modules/aws/: Cargo.toml  plugin.toml
modules/aws/src/: lib.rs
modules/azure/: Cargo.toml  plugin.toml
modules/azure/src/: lib.rs
modules/conda/: Cargo.toml  plugin.toml
modules/conda/src/: lib.rs
modules/docker/: Cargo.toml  plugin.toml
modules/docker/src/: lib.rs
modules/exitcode/: Cargo.toml  plugin.toml
modules/exitcode/src/: lib.rs
modules/gcp/: Cargo.toml  plugin.toml
modules/gcp/src/: lib.rs
modules/git/: Cargo.toml  plugin.toml
modules/git/src/: lib.rs
modules/go/: Cargo.toml  plugin.toml
modules/go/src/: lib.rs
modules/kubernetes/: Cargo.toml  plugin.toml
modules/kubernetes/src/: lib.rs
modules/mercurial/: Cargo.toml  plugin.toml
modules/mercurial/src/: lib.rs
modules/node/: Cargo.toml  plugin.toml
modules/node/src/: lib.rs
modules/rust/: Cargo.toml  plugin.toml
modules/rust/src/: lib.rs
modules/svn/: Cargo.toml  plugin.toml
modules/svn/src/: lib.rs
modules/sysinfo/: Cargo.toml  plugin.toml
modules/sysinfo/src/: lib.rs
modules/terraform/: Cargo.toml  plugin.toml
modules/terraform/src/: lib.rs
modules/time/: Cargo.toml  plugin.toml
modules/time/src/: lib.rs
modules/timer/: Cargo.toml  plugin.toml
modules/timer/src/: lib.rs
themes/default/: theme.toml
themes/example/: theme.toml
themes/minimal/: theme.toml
ziron-cli/: Cargo.toml
ziron-cli/src/: main.rs
ziron-core/: Cargo.toml
ziron-core/src/: cache.rs  config.rs  error.rs  event.rs  ipc.rs  lib.rs  module.rs  prompt.rs  theme.rs
ziron-daemon/: Cargo.toml
ziron-daemon/src/: daemon.rs  main.rs  watchers.rs
ziron-prompt/: Cargo.toml
ziron-prompt/src/: main.rs
ziron-shell/: Cargo.toml
ziron-shell/src/: command.rs  completion.rs  executor.rs  jobs.rs  main.rs  parser.rs  shell.rs
