[workspace]
members = [
    "ziron-core",
    "ziron-cli",
    "ziron-daemon",
    "ziron-prompt",
    "ziron-shell",
    "modules/git",
    "modules/sysinfo",
    "modules/exitcode",
    "modules/timer",
    "modules/time",
    "modules/venv",
    "modules/node",
    "modules/rust",
    "modules/conda",
    "modules/svn",
    "modules/mercurial",
    "modules/docker",
    "modules/kubernetes",
    "modules/aws",
    "modules/gcp",
    "modules/azure",
    "modules/terraform",
    "modules/go",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Ziron Contributors"]
license = "MIT"
repository = "https://github.com/ziron/ziron"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# IPC
bincode = "1.3"
ipc-channel = "0.18"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
mockall = "0.13"
tempfile = "3.10"

# System
hostname = "0.4"

# Line editing
rustyline = "15.0"

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# File system watching
notify = "6.1"

