[package]
name = "ziron-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
hostname.workspace = true

[dev-dependencies]
mockall.workspace = true
tempfile.workspace = true
