[package]
name = "ziron-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ziron-core = { path = "../ziron-core" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bincode.workspace = true
serde_json.workspace = true

